# oracle_filter

./: .gitignore  README.md  docker-compose.yml  oracle_connect.py  oracle_data_init.py  oracle_export_csv.py  oracle_export_join.py  oracle_export_query.py  oracle_query_join_export.py  pyproject.toml  querytable.csv  raw_data.csv  result.csv
