[tool.poetry]
name = "oracle_filter"
version = "0.1.0"
description = ""
authors = ["Stanislav Somov <goofma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cx-Oracle = "^8.3.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
